# QtProject_Starship

./: .gitignore  CMakeLists.txt  QtProject_Starship.rar  Qt大作业设计文档.docx  Qt星穹铁船实验报告(1).docx  Qt星穹铁船实验报告.docx  README.md  main.cpp  myScene.cpp  myScene.h  sharship.h  starship.cpp  starship.h  starship.ui  ~$大作业设计文档.docx  类设计说明.md  素材.md  进展报告.pptx
QtProject_Starship/: CMakeLists.txt  PageSwitcher.h  Qt星穹铁船实验报告(1).docx  clock_prompt.cpp  clock_prompt.h  coin.cpp  coin.h  credits.ui  game_scene.cpp  game_scene.h  main.cpp  main_menu.cpp  main_menu.h  main_menu.ui  myScene.cpp  myScene.h  mywidget.cpp  mywidget.h  pageswitcher.cpp  planet.cpp  planet.h  resources.qrc  scorewindow.cpp  scorewindow.h  scoring_point.cpp  scoring_point.h  starship.cpp  starship.h  walkthrough_page1.cpp  walkthrough_page1.h  walkthrough_page1.ui  walkthrough_page2.cpp  walkthrough_page2.h  walkthrough_page2.ui  ~$星穹铁船实验报告(1).docx  ~WRL0554.tmp
build-QtProject_Starship-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-QtProject_Starship-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: codemodel-v2-2f70fbc3abe20d651135.json  directory-.-Debug-0bd17bf31b697cd392fa.json  index-2023-06-03T13-56-28-0360.json  target-star_ship-Debug-dea8be9a2bd82066a495.json  target-star_ship_autogen-Debug-11a1f41107ef3bee2fdc.json
build-QtProject_Starship-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-a5fe8b3d6b1c83a466ab.json  cmakeFiles-v1-eb2f70f17980e7aafc35.json  codemodel-v2-3f47ca2748927afc4a27.json  index-2023-06-03T13-53-39-0740.json  target-star_ship-Debug-740b0b2dafb9518d2b3f.json  target-star_ship_autogen_timestamp_deps-Debug-60d9f33f95a55d6fb16c.json
build-QtProject_Starship-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-QtProject_Starship-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-QtProject_Starship-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QActionGroup.29B7D09D24773B4B.idx  QFileSystemModel.99305FD305D0A5FA.idx  QGraphicsItem.260CED151D8E8288.idx  QGraphicsScene.F7CF7D0C24B94834.idx  QObject.83CD4FDFFEA0B194.idx  QPaintDevice.932D5FF0E1D02872.idx  QPaintDeviceWindow.E6BF349A0AC9228D.idx  QPointF.1CF4E5D59A6064F5.idx  QRect.2F74D38553D20522.idx  QScopedPointer.5B258EDED0F796D7.idx  QScrollerProperties.DBA9EE520C92E252.idx  QShortcut.25E74795015D7E8B.idx  QStyle.5AD367407726B7A0.idx  QStyleOption.2BED062886790574.idx  (+233 more)
build-QtProject_Starship-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/star_ship_autogen/: deps
build-QtProject_Starship-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/star_ship_autogen/EWIEGA46WW/: qrc_resources.cpp
untitled/: CMakeLists.txt  gamewidget.cpp  gamewidget.h  gamewindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
